# UniVise

./: README.md
backend/: dependencies.py  main.py  package.json  pyproject.toml  requirements.txt  unsw_course_scraper_api.py
backend/app/: config.py  delete_arts.py  dependencies.py  insert_degrees.py  main.py  repopulate_mindmesh_edges.py  upload_degrees.py
backend/app/core/: config.py  settings.py
backend/app/data/: arts_faculty_details.json  degrees_engineering.json  degrees_law_and_justice.json  degrees_medicine.json  degrees_science.json  delete_unsw_degrees.py  upload_degrees.py
backend/app/data/arts_faculty/: arts_faculty_details.json  degrees_arts_faculty.json
backend/app/data/business_faculty/: business_faculty_details.json  business_missing_2.json  business_missing_details.json  (+1 more)
backend/app/models/: schemas.py
backend/app/routers/: admin.py  ai_advisor.py  auth.py  chat.py  chatbot_routes.py  compare_programs.py  compare_programs_helpers.py  final_plan.py  final_plan_service.py  flexibility_filtering.py  flexibility_filtering_helpers.py  health.py  jobs.py  mindmesh_ai.py  recommendation.py  reports.py  roadmap.py  roadmap_common.py  roadmap_industry.py  roadmap_school.py  roadmap_transcript.py  roadmap_unsw.py  roadmap_unsw_flexibility.py  roadmap_unsw_helpers.py  smart_related.py  switch_advisor.py  traits.py  user.py
backend/app/routes/: ai_service.py
backend/app/utils/: auth.py  chatbot_service.py  database.py  final_plan_service.py  mindmesh_rules.py  openai_client.py  serpapi_client.py  supabase_client.py  user_context.py
(+158 files in other folders)
